Updated deployment file

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -2,21 +2,17 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   labels:
-    app: test-deployment
-  name: test-deployment
+    app: go-kube-deployment
+  name: go-kube-deployment
 spec:
   replicas: 4
   template:
     metadata:
       labels:
-        app: golangtest
+        app: go-kube
     spec:
       containers:
       - name: main
-        image: kenkoii/golangtest
+        image: kenkoii/go-kube
         ports:
         - containerPort: 3000
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 3000
