--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -5,7 +5,7 @@ metadata:
     app: go-kube-deployment
   name: go-kube-deployment
 spec:
-  replicas: 4
+  replicas: 2
   template:
     metadata:
       labels:
@@ -13,6 +13,6 @@ spec:
     spec:
       containers:
       - name: main
-        image: kenkoii/go-kube
+        image: gcr.io/wikix-staging/go-kube
         ports:
         - containerPort: 3000
