Deployment file change

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -13,6 +13,6 @@ spec:
     spec:
       containers:
       - name: main
-        image: gcr.io/wikix-staging/go-kube
+        image: kenkoii/go-kube
         ports:
         - containerPort: 3000
